--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -553,7 +553,7 @@ a:link {
 	line-height: 22px;
 }
 
-#sidebar-widgets .widget ul span.number {
+#sidebar-widgets .widget span.number {
 	color: #fff;
 	display: block;
 	font-size: 11px;
